# face_recognition_github

./: CMakeLists.txt  README.md  constants.h  main.cpp  util.h
FaceDetector/: face_detector.cpp  face_detector.hpp
FaceRecognition/: face_recognition.cpp  face_recognition.hpp
FacialLandmarks/: facial_landmarks.cpp  facial_landmarks.hpp  model.cpp  model.hpp
